--- a/data-analyst.html
+++ b/data-analyst.html
@@ -71,6 +71,16 @@
   
 	
 <!--Begin body here --> 
+<h5><a href='https://mainebhr.recruiterbox.com/jobs/fk03otw/'>
+    OCFS INFORMATION SERVICES DATA ANALYST  at State of Maine
+</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qXmaVfw8&k=Job&j=omuEafwo&__jvst=Employee+Referral+&__jvsd=sC6OMgw3&__jvsc=Twitter&bid=nRXmqMwR'>National Education Partners Careers - Business Data Analyst</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
 <h5><a href='https://jobs.crelate.com/portal/manifestsolutions/job/pg5fcyjw9xtwomprg4pcypioiy'>Data Analyst | Manifest Solutions</a></h5> 
 <p><span class="badge badge-light">Columbus, OH  Columbus</span></p>
 <p>Posted on: 2019-11-01</p>
@@ -159,7 +169,7 @@
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SpectraMedix/743999698579153-health-care-data-analyst'>SpectraMedix Health Care Data Analyst | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SpectraMedix/743999698579153-health-care-data-analyst'>SpectraMedix Health Care Data Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -175,7 +185,7 @@
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4re.referrals.selectminds.com/jobs/data-analyst-26873'>Data Analyst - RELX Careers</a></h5> 
+<h5><a href='https://4re.referrals.selectminds.com/jobs/data-analyst-26873'>Data Analyst - RELX Careers</a></h5> 
 <p><span class="badge badge-light">Sydney Australia</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -295,11 +305,11 @@
 <p><span class="badge badge-light">Portland, Oregon</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://formarshgroup.applytojob.com/apply/RqDqOIB5y1/Senior-Survey-Statistician'>Senior Survey Statistician - Fors Marsh Group - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://formarshgroup.applytojob.com/apply/RqDqOIB5y1/Senior-Survey-Statistician'>Senior Survey Statistician - Fors Marsh Group - Career Page</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/falcon/2ddbd3f3-4d89-45cd-b158-1344f73fbe6f'>Falcon.io - R&D Data Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/falcon/2ddbd3f3-4d89-45cd-b158-1344f73fbe6f'>Falcon.io - R&D Data Analyst</a></h5> 
 <p><span class="badge badge-light">Denmark</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -343,7 +353,7 @@
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://4re.referrals.selectminds.com/jobs/data-analyst-27501'>Data Analyst - RELX Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4re.referrals.selectminds.com/jobs/data-analyst-27501'>Data Analyst - RELX Careers</a></h5> 
 <p><span class="badge badge-light">Oklahoma City United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -478,14 +488,6 @@
 <h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=quP9Vfw7&k=Job&j=oD7fafwT&__jvst=Employee+Referral&__jvsd=sxe4Bgwb&__jvsc=Twitter&bid=n4NSmMwm'>Align Technology Careers - Senior Data Scientist/Statistician</a></h5> 
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=o88pbfwA&__jvst=Employee&__jvsd=sFU2Kgw6&__jvsc=Twitter&bid=nNHSmMwZ'>Benefitfocus Careers - Data Analyst II</a></h5> 
-<p><span class="badge badge-light">Charleston, South Carolina</span></p>
-<p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/jcpjcpbangalore/job/oXWrbfwf'>J.C. Penney India Careers - Analyst - SAS & Statistics</a></h5> 
-<p><span class="badge badge-light">Bangalore Bangalore</span></p>
-<p>Posted on: 2019-10-28</p>
 <hr/>
 
 
